--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ env:
 
 
 install:
-  - git clone --depth=1 https://github.com/OCA/maintainer-quality-tools.git
+  - git clone --depth=1 https://github.com/akretion/maintainer-quality-tools.git -b master-no-QUnitSuite
     ${HOME}/maintainer-quality-tools
   - export PATH=${HOME}/maintainer-quality-tools/travis:${PATH}
   - export WKHTMLTOPDF_VERSION=0.12.5
