--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # generated from manifests external_dependencies
-erpbrasil.assinatura-nopyopenssl
+erpbrasil.assinatura
 erpbrasil.base
 nfelib
 num2words
